worloads/kong/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: konga
  labels:
    app: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:latest
        ports:
        - containerPort: 1337
