worloads/kong/service.yml
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: konga
spec:
  selector:
    app: konga
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
  type: ClusterIP  # Alterado para ClusterIP, pois estamos usando Ingress para acesso externo
