worloads/kong/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: konga
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Certifique-se de que esta linha está presente
  rules:
  - host: konga.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: konga
            port:
              number: 1337
